:bug: Fix scrollbar visible in Firefox

--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -15,6 +15,7 @@
     max-height: 500px;
     overflow: scroll;
     overflow-x: hidden;
+    scrollbar-width: none;
     border-radius: 8px;
     background-color: #21285f;
     position: fixed;
